test/types/file/freadNotABoolean.good
freadNotABoolean.chpl:5: error: Unhandled system error: bad format (1002)
